# Blunder-Therapist-Backend

./: .dockerignore  .env.example  Dockerfile  check_job.py  dev.db  pyproject.toml  requirements.txt  test_features.py
app/: config.py  database.py  dependencies.py  logging_setup.py  main.py  models.py
app/routers/: agent.py  games.py  imports.py
app/schemas/: agent.py  api.py
app/services/: agent.py  agent_tools.py  chess_import.py  coach.py  dna_decision.py  dna_job.py  event_detector.py  features.py  import_job.py  llm.py  stockfish_service.py  summarizer.py  tilt_detector.py
tests/: conftest.py  test_agent_router.py  test_agent_tools.py  test_auth.py  test_chess_import.py  test_database_import.py  test_dna_job.py  test_endpoints.py  test_event_detector.py  test_import_job.py  test_import_router.py  test_models.py  test_stockfish_service.py  test_summarizer.py
