[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "asyncpg>=0.31.0",
    "chess>=1.11.2",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "pydantic-settings>=2.14.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "python-chess>=1.999",
    "python-jose[cryptography]>=3.5.0",
    "psycopg[binary]>=3.2.4",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.4.1",
    "stockfish>=3.28.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.46.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
